exo: Do not commit if widget creation is deferred

Bug: 877254
Test: gtk3-demo
Test: exo_unittests
Change-Id: Iec316067589088e85dec3429df4fe9f5a5604a65
Reviewed-on: https://chromium-review.googlesource.com/1188343
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Dominik Laskowski <domlaskowski@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586116}
Former-commit-id: 4e71dae7cedd62d6fc123939d8e4929bebe6e706